<resources>
    <string name="app_name">Ma réu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="timePicker">timePicker</string>
    <string name="datePicker">datePicker</string>
    <string name="add_title_placeholder">Ajouter un titre</string>
    <string name="meeting_date_placeholder">Date de la réunion</string>
    <string name="meeting_time_placeholder">Heure de la réunion</string>
    <string name="meeting_room_placeholder">Salle de la réunion</string>
    <string name="add_attendees_label">Ajouter des participants</string>
    <string name="attendees_list_placeholder">Liste des participants</string>
    <string name="create">Créer</string>
    <string name="attendees_mail_placeholder">attendees@mail, attendees@mail, attendees@mail, attendees@mail</string>
    <string name="item_topic_placeholder">Topic -</string>
    <string name="item_time_placeholder">Time -</string>
    <string name="item_room_placeholder">Room</string>
    <string name="find_room_label">Rechercher une salle</string>
    <string name="find_attendee_label">Rechercher un collaborateur</string>
    <string name="room_example_placeholder">exemple: salle 1</string>
    <string name="mail_example_placeholder">exemple@lamzone.com</string>
    <string name="meeting_details_label">Détails de la réunion</string>
    <string name="new_meeting_label">Nouvelle réunion</string>
    <string name="filter_by_date">Filtrer par date</string>
    <string name="filter_by_room">Filtrer par lieu</string>


    <string name="room1">Salle red</string>
    <string name="room2">Salle maroon</string>
    <string name="room3">Salle yellow</string>
    <string name="room4">Salle lime</string>
    <string name="room5">Salle green</string>
    <string name="room6">Salle aqua</string>
    <string name="room7">Salle teal</string>
    <string name="room8">Salle blue</string>
    <string name="room9">Salle navy</string>
    <string name="room10">Salle fuchsia</string>
    <string name="room_filter_label">roomFilter</string>
    <string name="date_filter_label">dateFilter</string>
    <string name="room_filter_placeholder">exemple: Salle beta</string>
    <string name="date_filter_placeholder">jour/mois/année</string>

    <string-array name="rooms">
        <item>@string/room1</item>
        <item>@string/room2</item>
        <item>@string/room3</item>
        <item>@string/room4</item>
        <item>@string/room5</item>
        <item>@string/room6</item>
        <item>@string/room7</item>
        <item>@string/room8</item>
        <item>@string/room9</item>
        <item>@string/room10</item>
    </string-array>

    <string-array name="random_mails">
        <item>abdel@lamzone.com</item>
        <item>abel@lamzone.com</item>
        <item>achille@lamzone.com</item>
        <item>adeline@lamzone.com</item>
        <item>adolphe@lamzone.com</item>
        <item>adriana@lamzone.com</item>
        <item>agathe@lamzone.com</item>
        <item>ahmed@lamzone.com</item>
        <item>aimery@lamzone.com</item>
        <item>alain@lamzone.com</item>
        <item>alban@lamzone.com</item>
        <item>albertine@lamzone.com</item>
        <item>albin@lamzone.com</item>
        <item>alessandra@lamzone.com</item>
        <item>alfred@lamzone.com</item>
        <item>alice@lamzone.com</item>
        <item>ana-maria@lamzone.com</item>
        <item>andrea@lamzone.com</item>
        <item>andrew@lamzone.com</item>
        <item>alphonse@lamzone.com</item>
        <item>amaury@lamzone.com</item>
        <item>amina@lamzone.com</item>
        <item>angel@lamzone.com</item>
        <item>anissa@lamzone.com</item>
        <item>anna-lisa@lamzone.com</item>
        <item>anne@lamzone.com</item>
        <item>armando@lamzone.com</item>
        <item>barbara@lamzone.com</item>
        <item>bastien@lamzone.com</item>
        <item>bernadette@lamzone.com</item>
        <item>bertrand@lamzone.com</item>
        <item>bill@lamzone.com</item>
        <item>blandine@lamzone.com</item>
        <item>brahim@lamzone.com</item>
        <item>carine@lamzone.com</item>
        <item>charles@lamzone.com</item>
        <item>carmine@lamzone.com</item>
        <item>carole@lamzone.com</item>
        <item>christiane@lamzone.com</item>
        <item>christophe@lamzone.com</item>
        <item>claudio@lamzone.com</item>
        <item>chiara@lamzone.com</item>
        <item>cyprien@lamzone.com</item>
        <item>cyrille@lamzone.com</item>
        <item>diego@lamzone.com</item>
        <item>damien@lamzone.com</item>
        <item>daniela@lamzone.com</item>
        <item>diego@lamzone.com</item>
        <item>edward@lamzone.com</item>
        <item>edwin@lamzone.com</item>
        <item>esther@lamzone.com</item>

    </string-array>

    <string-array name="images_array">
        <item name="image1">https://cdn.pixabay.com/photo/2018/03/21/03/22/illustration-3245462_960_720.jpg</item>
        <item name="image2">https://cdn.pixabay.com/photo/2017/04/24/20/34/giraffe-2257780_960_720.png</item>
        <item name="image3">https://cdn.pixabay.com/photo/2021/01/16/13/01/sunset-5922065_960_720.png</item>
        <item name="image4">https://cdn.pixabay.com/photo/2014/08/18/15/47/digital-art-420830_960_720.png</item>
        <item name="image5">https://cdn.pixabay.com/photo/2014/07/19/06/48/digital-art-396825_960_720.png</item>
        <item name="image6">https://cdn.pixabay.com/photo/2014/05/18/00/33/sun-346710_960_720.png</item>
        <item name="image7">https://cdn.pixabay.com/photo/2012/04/14/16/37/sky-34536_960_720.png</item>
        <item name="image8">https://cdn.pixabay.com/photo/2015/02/24/15/41/wolf-647528_960_720.jpg</item>
        <item name="image9">https://cdn.pixabay.com/photo/2016/11/21/03/56/landscape-1844226_960_720.png</item>
        <item name="image10">https://cdn.pixabay.com/photo/2014/12/29/08/29/lens-582605_960_720.jpg</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_label">Close</string>

</resources>