<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/meeting_item_margin_top"
    android:layout_marginBottom="@dimen/meeting_item_margin_bottom">

    <ImageView
        android:id="@+id/item_list_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/recycler_view_image_margin_horizontal"
        android:layout_marginEnd="@dimen/recycler_view_image_margin_horizontal"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/details_text_layout"/>

    <LinearLayout
        android:id="@+id/details_text_layout"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/recycler_view_image_margin_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/meeting_item_inline_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_topic_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/item_topic_placeholder"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_time_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/item_time_placeholder"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_room_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/item_room_placeholder"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/item_attendees_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/attendees_mail_placeholder"
            android:textSize="@dimen/subtitle_size" />
    </LinearLayout>


    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/recycler_view_image_margin_horizontal"
        android:background="@null"
        app:srcCompat="@drawable/ic_delete"
        app:layout_constraintStart_toEndOf="@id/details_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>